<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.daniele.tarefas2.ui.sobre.SobreFragment"
        android:label="@string/title_sobre"
        tools:layout="@layout/fragment_sobre" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.daniele.tarefas2.ui.tarefa.TarefaFragment"
        android:label="@string/title_remedio"
        tools:layout="@layout/fragment_tarefa" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.daniele.tarefas2.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

</navigation>