<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardInformacao"
        android:layout_width="371dp"
        android:layout_height="372dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toTopOf="@+id/cardViewRodaPe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="379dp"
            android:layout_height="415dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="286dp">

            <EditText
                android:id="@+id/primeiroNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/primeiro_nome" />

            <EditText
                android:id="@+id/sobreNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefone" />

            <EditText
                android:id="@+id/data_aniversario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/aniversario" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/salvar"
                android:textColor="@color/Whithe_1" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewRodaPe"
            android:layout_width="412dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/MidNightGreen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        </androidx.cardview.widget.CardView>
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
